Fixed misaligned login form.

--- a/assets/css/forms.less
+++ b/assets/css/forms.less
@@ -5,7 +5,7 @@ input, textarea {
 	border: solid 1px @border-gray;
 	outline: 0;
 	font: normal 13px/100% Verdana, Tahoma, sans-serif;
-	width: 150px;
+	width: 200px;
 	background: #fff;
   .rounded();
   clear: both;
